updated and fixed genre and director view, can not get info to lower down so its readable. Updated profile view, cant get all info to display. most aspects working as should. Still cant get images for two movies to update.

--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,3 +1,1 @@
-.MainView {
-  background-color: black !important;
-}
+
